<resources>
    <string name="app_name">Alt Shift</string>
    <string name="accept_button">Accept</string>
    <string name="pending_requests">Below are offered shift swaps,\ntap for aye or bin for naw.</string>
    <string name="pending_available">Below are your shift swap requests.</string>
    <string name="pending_text">Below are your pending shift requests, tap to accept or reject.</string>
    <string name="calendar_info">Tap on a date to see your shifts on that day and select a shift that you wish to swap</string>
    <string name="swap_info">Tap below to select a shift to swap your shift on %1$s with.</string>
    <string name="add_shift_info">Tap below to select assign a shifter to work on %1$s.</string>
    <string name="calender_shift_list">You can request a swap request by tapping on it below</string>
    <string name="tool_bar_title_date">%1$s %2$s %3$s</string>
    <string name="reject_button">Reject</string>
    <string name="action_home">Go Back To Menu</string>
    <string name="action_logout">Logout</string>
    <string name="available_swap">My Swaps:</string>
    <string name="offered_swap">Offered Swaps:</string>
    <string name="confirm_swap_request">Confirm Swap Request</string>
    <string name="confirm_swap">Confirm Swap</string>
    <string name="action_more">View more options</string>
    <string name="managerCheckbox">Tick if Manager</string>
    <string name="register">Register</string>
    <string name="shift">Shift</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="role">Role</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="No_shifts">No shifts on the selected day</string>
    <string name="Hide_Calender">Hide Calendar</string>
    <string name="Show_Calender">Show Calendar</string>
    <string name="Your_shifts">Your shifts</string>
    <string name="Your_Requested_Swaps">Your requested swaps</string>
    <string name="calendar_explain">Tap on a date to see shifts assigned to your team. You can assign shifts by selecting a date and using the + button</string>
    <string name="your_shift">Your Shift</string>
    <string name="a">a</string>
</resources>
