<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/backgroundrectangle"
            android:elegantTextHeight="true"
            android:text="@string/calendar_explain"
            android:textAlignment="center"
            android:textSize="16sp" />

        <Button
            android:id="@+id/hideShowCal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/jamesblue"
            android:clickable="true"
            android:text="@string/Hide_Calender"
            android:textColor="@color/colorAccent" />

        <com.github.sundeepk.compactcalendarview.CompactCalendarView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/compactcalendar_view"
            android:layout_width="fill_parent"
            android:layout_height="250dp"
            android:layout_marginTop="5dp"
            android:elevation="25dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:compactCalendarBackgroundColor="@android:color/white"
            app:compactCalendarCurrentDayBackgroundColor="@android:color/white"
            app:compactCalendarCurrentDayTextColor="@color/rachelsdarkprink"
            app:compactCalendarCurrentSelectedDayBackgroundColor="@color/andreasyellow"
            app:compactCalendarEventIndicatorStyle="no_fill_large_indicator"
            app:compactCalendarTargetHeight="250dp"
            app:compactCalendarTextColor="@android:color/black"
            app:compactCalendarTextSize="14sp" />
        <!-- <TextView
             android:id="@+id/your_shifts"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:text="Your Shifts: "
             android:layout_margin="10dp"
             android:textSize="14sp"
             android:visibility="gone"/>-->

        <TextView
            android:id="@+id/shiftInfoDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elegantTextHeight="true"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/calender_shift_list"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/shifter_shifts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/compactcalendar_view"
            android:isScrollContainer="true"
            android:scrollbars="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"></androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/No_shifts"
            android:visibility="gone" />


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        app:srcCompat="@drawable/ic_add_circle_black_24dp" />
</FrameLayout>